@@ -6,6 +6,7 @@ v0.12.7
 	REQUIREMENTS config nodes and their specified resources.
 	Tweak to EVA pack resources when Kerbal EVAs from regular vessel vs a Recovery Contract Vessel.
 	Fixed CrewType tracking.
+	Finally fixed Rescue Kerbal vessel.kerbal tracking.
 	Updated Community Resource Pack to version 0.6.2.	
 	Remove requirement for RSTKSPGameEvents dll dependency. Changed to leverage 1.2.2 GameEvents extensions.
 v0.12.6
